<resources>
    <string name="app_name">ArtI</string>
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_art_museum">미술관</string>
    <string name="menu_profile">프로필</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme_title">테마 : %s</string>
    <string name="survey_title">마음에 드는 이미지를 골라주세요</string>
    <string name="search_hint">작품, 화가..등 검색</string>
    <string name="tv_doing_search">검색하기</string>
    <string name="doing_search">탐색하기</string>
    <string name="art">작품</string>
    <string name="artist">화가</string>
    <string name="genre">장르</string>
    <string name="art_museum">미술관</string>
    <string name="cancel">취소</string>


    <string name="info">
최종 업데이트: 2024.08.30 \n\n
본 이용약관(이하 "약관")은 귀하(이하 "사용자")가 [앱 이름] (이하 "앱")을 이용함에 있어 지켜야 할 조건과 절차를 규정합니다. 앱을 설치하거나 이용함으로써 귀하는 본 약관에 동의하게 됩니다. 동의하지 않으시면 앱을 사용하지 마십시오.\n\n
1. 서비스 설명\n
앱은 사용자가 자신의 사진과 다양한 미술작품의 화풍을 결합하여 새로운 이미지를 생성하고, 이를 "나만의 미술관"에 전시하여 다른 사용자들과 공유할 수 있도록 하는 서비스입니다.\n\n
2. 계정 등록 및 사용\n
사용자는 앱을 사용하기 위해 계정을 등록해야 하며, 정확하고 최신의 정보를 제공해야 합니다.\n
사용자는 계정의 보안을 유지할 책임이 있으며, 계정의 부정 사용에 대해 앱 제공자는 책임을 지지 않습니다.\n\n
3. 개인정보 보호\n
앱은 사용자의 개인정보를 보호하기 위해 최선의 노력을 다합니다. 개인정보 수집 및 이용에 관한 사항은 [개인정보처리방침 링크]를 참조하십시오.\n
사용자는 자신의 사진을 업로드하고, 해당 사진은 앱에서 제공하는 기능을 통해 예술 작품으로 변환될 수 있습니다.\n
앱은 사용자가 업로드한 사진과 생성된 이미지를 보관 및 처리하며, 이러한 이미지는 "나만의 미술관"에 전시되며, 다른 사용자가 이를 볼 수 있습니다.\n\n
4. 저작권 및 라이선스\n
사용자가 앱에 업로드한 사진에 대한 저작권은 사용자에게 있습니다. 그러나 사용자는 해당 사진을 기반으로 생성된 예술 작품에 대해 앱에 비독점적, 무상, 전 세계적, 영구적인 사용권을 부여합니다.\n
앱을 통해 생성된 모든 이미지에 대한 저작권은 앱 제공자와 사용자에게 공동으로 귀속됩니다. 앱 제공자는 이를 앱 내에서 또는 마케팅 목적 등으로 사용할 수 있습니다.\n
사용자는 자신이 업로드한 콘텐츠가 타인의 권리를 침해하지 않음을 보장해야 하며, 이를 위반할 경우 모든 법적 책임은 사용자에게 있습니다.\n\n
5. 콘텐츠 사용 및 전시\n
사용자는 앱을 통해 생성된 이미지를 "나만의 미술관"에 전시하고, 다른 사용자와 공유할 수 있습니다.\n
사용자는 앱 내에서 전시된 타인의 이미지를 무단으로 다운로드하거나 상업적으로 이용할 수 없습니다.\n\n
6. 사용자의 책임\n
사용자는 앱을 통해 생성된 이미지와 관련된 모든 활동에 대해 책임을 집니다.\n
사용자는 불법적이거나 타인의 권리를 침해하는 방식으로 앱을 이용하지 않을 것에 동의합니다.\n
앱은 사용자 간의 콘텐츠 공유 및 전시와 관련된 문제에 대해 책임지지 않습니다.\n\n
7. 면책 조항\n
앱은 서비스의 중단, 오류, 데이터 손실 등으로 인한 손해에 대해 책임지지 않습니다.\n
앱은 사용자가 업로드한 콘텐츠나 생성된 이미지로 인해 발생하는 모든 법적 문제에 대해 면책됩니다.\n\n
8. 서비스의 변경 및 종료\n
앱 제공자는 언제든지 서비스의 일부분 또는 전체를 변경하거나 중단할 수 있습니다. 이 경우 사용자에게 사전에 통지합니다.\n
사용자가 본 약관을 위반할 경우, 앱 제공자는 사용자에게 사전 통지 없이 서비스 이용을 제한하거나 종료할 수 있습니다.\n\n
9. 약관의 변경\n
앱 제공자는 필요에 따라 본 약관을 수정할 수 있으며, 변경된 약관은 앱 내에 게시함으로써 효력이 발생합니다.\n
변경된 약관에 동의하지 않는 경우, 사용자는 서비스 이용을 중단하고 계정을 삭제할 수 있습니다.\n\n
10. 연락처\n
본 약관에 대한 질문이나 이의가 있을 경우, [고객 지원 이메일 주소]로 문의해 주시기 바랍니다.\n
    </string>
    <string name="tv_introduce">소개</string>
    <string name="no_result_artist">일치하는 결과가 없습니다.</string>
    <string name="artist_detail">화가 상세</string>
</resources>